[gd_scene format=3 uid="uid://cdqsblmkvfqkk"]

[ext_resource type="Script" uid="uid://0p3b63ohsdy0" path="res://Stages/title/firstly_need_settings.gd" id="1_rsi2y"]
[ext_resource type="Texture2D" uid="uid://dkjel002c60if" path="res://Texture/yes/menu window.png" id="2_1mjja"]

[node name="first settings" type="MarginContainer" unique_id=1470050777 node_paths=PackedStringArray("sound_main", "sound_ost", "sound_sfx", "main_lebel", "ost_lebel", "sfx_lebel", "fullscreen_box") groups=["hide_after_enter_control_set", "show_after_quit_control_set"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
script = ExtResource("1_rsi2y")
sound_main = NodePath("VBoxContainer/MarginContainer3/VBoxContainer/SoundMain")
sound_ost = NodePath("VBoxContainer/MarginContainer4/VBoxContainer/SoundOST")
sound_sfx = NodePath("VBoxContainer/MarginContainer5/VBoxContainer/SoundSFX")
main_lebel = NodePath("VBoxContainer/MarginContainer3/VBoxContainer/Mainlebel")
ost_lebel = NodePath("VBoxContainer/MarginContainer4/VBoxContainer/OSTlebel")
sfx_lebel = NodePath("VBoxContainer/MarginContainer5/VBoxContainer/SFXlebel")
fullscreen_box = NodePath("VBoxContainer/MarginContainer6/VBoxContainer/CheckBox")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=196656879]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 90

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer" unique_id=818992362]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_1mjja")
region_rect = Rect2(24.682701, 24.650028, 448.40863, 451.06937)
patch_margin_left = 31
patch_margin_top = 33
patch_margin_right = 40
patch_margin_bottom = 37

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=312326377]
layout_mode = 2
mouse_filter = 2

[node name="idk" type="Control" parent="VBoxContainer" unique_id=900496458]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer" unique_id=1710286886]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer3" unique_id=1611628731]
layout_mode = 2

[node name="Mainlebel" type="RichTextLabel" parent="VBoxContainer/MarginContainer3/VBoxContainer" unique_id=1324872945]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
text = "FIRST_SET_SOUND_MAIN"
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 2

[node name="SoundMain" type="HSlider" parent="VBoxContainer/MarginContainer3/VBoxContainer" unique_id=249930793]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer" unique_id=434319113]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer4" unique_id=1569506890]
layout_mode = 2

[node name="OSTlebel" type="RichTextLabel" parent="VBoxContainer/MarginContainer4/VBoxContainer" unique_id=2073706469]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
text = "FIRST_SET_SOUND_BGM"
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 2

[node name="SoundOST" type="HSlider" parent="VBoxContainer/MarginContainer4/VBoxContainer" unique_id=1534752807]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer" unique_id=1959422199]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer5" unique_id=1673148901]
layout_mode = 2

[node name="SFXlebel" type="RichTextLabel" parent="VBoxContainer/MarginContainer5/VBoxContainer" unique_id=118216923]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
text = "FIRST_SET_SOUND_SFX"
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 2

[node name="SoundSFX" type="HSlider" parent="VBoxContainer/MarginContainer5/VBoxContainer" unique_id=1587789053]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer" unique_id=296932372]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer6" unique_id=1868251541]
layout_mode = 2
mouse_filter = 2

[node name="Fullscrean" type="RichTextLabel" parent="VBoxContainer/MarginContainer6/VBoxContainer" unique_id=784910609]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
text = "FIRST_SET_FULLSCREEN"
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/MarginContainer6/VBoxContainer" unique_id=1873957379]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
button_mask = 7

[node name="idk2" type="Control" parent="VBoxContainer" unique_id=120400527]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[connection signal="drag_ended" from="VBoxContainer/MarginContainer3/VBoxContainer/SoundMain" to="." method="_on_sound_main_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer3/VBoxContainer/SoundMain" to="." method="_on_sound_main_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/MarginContainer4/VBoxContainer/SoundOST" to="." method="_on_sound_ost_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer4/VBoxContainer/SoundOST" to="." method="_on_sound_ost_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/MarginContainer5/VBoxContainer/SoundSFX" to="." method="_on_sound_sfx_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer5/VBoxContainer/SoundSFX" to="." method="_on_sound_sfx_value_changed"]
[connection signal="toggled" from="VBoxContainer/MarginContainer6/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
